--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -1,10 +1,17 @@
 {
   "profiles": {
     "SCXAuctionGrabber": {
-      "commandName": "Project"
-    },
-    "Container (Dockerfile)": {
-      "commandName": "Docker"
+      "commandName": "Project",
+      "AuctionGrabberService": {
+        "commandName": "Project",
+        "dotnetRunMessages": true,
+        "environmentVariables": {
+          "DOTNET_ENVIRONMENT": "Development"
+        }
+      },
+      "Container (Dockerfile)": {
+        "commandName": "Docker"
+      }
     }
   }
 }
